map changes, new images

--- a/pacman.html
+++ b/pacman.html
@@ -24,37 +24,50 @@
 		<div id="container">
 			<div id="world" ></div>
 			<div id='pacman'></div>
+			<div id="ghost01"></div>
 		</div>
 		<script>
 			var world = [
 				[2,2,2,2,2,2,2,2,2,2,2],
-				[2,1,1,1,1,1,1,1,2,1,2],
-				[2,1,1,1,2,2,2,2,2,1,2],
-				[2,1,1,1,2,1,1,1,1,1,2],
+				[2,1,1,1,1,2,1,1,1,1,2],
+				[2,1,2,2,1,2,1,2,2,1,2],
+				[2,1,2,2,1,2,1,2,2,1,2],
+				[2,1,1,1,1,1,1,1,1,1,2],
+				[2,1,2,2,1,1,1,2,2,1,2],
+				[2,1,1,1,1,2,1,1,1,1,2],
+				[2,1,2,1,2,0,2,1,2,1,2],
+				[2,1,2,1,1,1,1,1,2,1,2],
+				[2,1,2,2,1,1,1,2,2,1,2],
+				[2,1,2,1,1,2,1,1,2,1,2],
+				[2,1,2,1,2,2,2,1,2,1,2],
 				[2,1,1,1,1,0,1,1,1,1,2],
-				[2,1,1,1,1,1,2,2,1,1,2],
-				[2,1,1,1,1,1,1,2,1,1,2],
-				[2,1,1,1,1,1,1,2,1,1,2],
-				[2,1,1,1,1,1,1,2,1,1,2],
-				[2,2,2,2,2,1,1,2,2,2,2],
-				[2,1,1,1,2,1,1,1,1,1,2],
-				[2,1,1,1,2,1,1,1,1,1,2],
-				[2,1,1,1,2,1,1,1,1,1,2],
-				[2,1,1,1,2,1,1,1,1,1,2],
-				[2,1,1,1,2,2,2,1,1,1,2],
+				[2,1,2,1,2,2,2,1,2,1,2],
+				[2,1,2,1,1,2,1,1,2,1,2],
+				[2,1,2,1,1,2,1,1,2,1,2],
 				[2,1,1,1,1,1,1,1,1,1,2],
+				[2,2,1,1,2,2,2,1,1,2,2],
+				[2,1,1,1,1,2,1,1,1,1,2],
+				[2,1,2,2,1,2,1,2,2,1,2],
 				[2,1,1,1,1,1,1,1,1,1,2],
-				[2,1,1,1,1,2,2,2,2,1,2],
-				[2,2,2,2,2,2,1,1,2,1,2],
-				[2,1,1,1,1,1,1,1,1,1,2],
+				[2,1,1,2,1,1,1,2,1,1,2],
+				[2,1,2,2,2,1,2,2,2,1,2],
 				[2,1,1,1,1,1,1,1,1,1,2],
 				[2,2,2,2,2,2,2,2,2,2,2]
 			];
 
 			var pacman = {
 				x: 5,
-				y: 4
+				y: 12
 			};
+
+			var ghost01 = {
+				x: 5,
+				y: 7
+			};
+
+			if([pacman.y] == [ghost01.y] && [pacman.x] == [ghost01.x]){
+					alert("You Lose!");
+				}
 
 			function displayWorld(){
 				var output = '';
@@ -79,8 +92,14 @@
 				document.getElementById('pacman').style.left = pacman.x*20+"px";
 			}
 
+			function displayGhost01(){
+				document.getElementById('ghost01').style.top = ghost01.y*20+"px";
+				document.getElementById('ghost01').style.left = ghost01.x*20+"px";
+			}
+
 			displayWorld();
 			displayPacman();
+			displayGhost01();
 
 			document.onkeydown = function(e){
 				var blueYminus=pacman.y-1;
@@ -102,11 +121,33 @@
 				}
 				if(world[pacman.y][pacman.x] == 1){
 					world[pacman.y][pacman.x] = 0;
-					displayWorld();
 				}
-				console.log(e.keyCode);
+				displayWorld();
 				displayPacman();
 			}
+
+			setInterval(function(){ 
+				var blueYminus=ghost01.y-1;
+				var blueXminus=ghost01.x-1;
+				var blueYplus=ghost01.y+1;
+				var blueXplus=ghost01.x+1;
+				var ghostDirection=(Math.floor(Math.random() * 4) + 1);
+				if(ghostDirection == 1 && (world[ghost01.y][blueXminus]) != 2){
+					ghost01.x--;
+				}
+				if(ghostDirection == 2 && (world[ghost01.y][blueXplus]) != 2){
+					ghost01.x++;
+				} 
+				if(ghostDirection == 3 && (world[blueYminus][ghost01.x]) != 2){
+					ghost01.y--;
+				}
+				if(ghostDirection == 4 && (world[blueYplus][ghost01.x]) != 2){
+					ghost01.y++;
+				}
+				console.log(ghostDirection);
+				displayGhost01();
+			}, 300);
+
 			// features
 			// move pacman left right up down
 				//both 'coin' and 'empty'
